--- a/index.html
+++ b/index.html
@@ -821,6 +821,7 @@ board_view.render()
     <li><a href="http://twitter.com/fansipans">@fansipans</a></li>
     <li><a href="mailto:mike.walker@napkindrawing.com">mike.walker@napkindrawing.com</a>
     <li><a href=">http://napkindrawing.com">http://napkindrawing.com</a></li>
+    <li><a href=">http://github.com/napkindrawing">http://github.com/napkindrawing</a></li>
   </ul>
 </div>
 
