--- a/index.html
+++ b/index.html
@@ -867,6 +867,16 @@ board_view.render()
 
 
 
+<div class="slide">
+  <h2>Gotchas, Things To Watch Out For</h2>
+  <ul>
+    <li>Concurrency / Race Conditions</li>
+    <li>Refactoring / "The Backbone Way"</li>
+    <li>Concurrency / Race Conditions</li>
+    <li>Did I mention Concurrency / Race Conditions?</li>
+  </ul>
+</div>
+
 
 <div class="slide">
   <h2>Thank You!</h2>
