--- a/index.html
+++ b/index.html
@@ -861,22 +861,21 @@ board_view.render()
     <div class="example"></div>
   </div>
 
-
 </div>
-
-
-
 
 <div class="slide">
   <h2>Gotchas, Things To Watch Out For</h2>
   <ul>
-    <li>Concurrency / Race Conditions</li>
+    <li>Concurrency</li>
+    <li>Race Conditions</li>
     <li>Refactoring / "The Backbone Way"</li>
-    <li>Concurrency / Race Conditions</li>
-    <li>Did I mention Concurrency / Race Conditions?</li>
+    <li>Concurrency</li>
+    <li>Concurrency</li>
+    <li>Race Conditions</li>
+    <li>Race Conditions</li>
+    <li>Browser-Dependent Race Conditions</li>
   </ul>
 </div>
-
 
 <div class="slide">
   <h2>Thank You!</h2>
@@ -889,9 +888,6 @@ board_view.render()
   </ul>
   <img src="http://farm7.static.flickr.com/6190/6113242449_a083cb98df_d.jpg" style="float: right; margin-right: 140px;"/>
 </div>
-
-
-
 
 <!-- Other extension HTML snippets go here, at the bottom of the deck container. -->
 
