--- a/index.html
+++ b/index.html
@@ -883,8 +883,8 @@ board_view.render()
     <li>Mike Walker</li>
     <li><a href="http://twitter.com/fansipans">@fansipans</a></li>
     <li><a href="mailto:mike.walker@napkindrawing.com">mike.walker@napkindrawing.com</a>
-    <li><a href=">http://napkindrawing.com">http://napkindrawing.com</a></li>
-    <li><a href=">http://github.com/napkindrawing">http://github.com/napkindrawing</a></li>
+    <li><a href="http://napkindrawing.com">http://napkindrawing.com</a></li>
+    <li><a href="http://github.com/napkindrawing">http://github.com/napkindrawing</a></li>
   </ul>
   <img src="http://farm7.static.flickr.com/6190/6113242449_a083cb98df_d.jpg" style="float: right; margin-right: 140px;"/>
 </div>
